test/success/std/closure_inference_pass/identity/main.sk
module Main {

fn id[T](t: T) -> T {
    t
}

fn main() {
    let f = ||{};
    let f2 = id(f);
}

}