test/errors/borrowcheck/function_borrow_deeper/main.sk
module Main {

fn sink[T](t: T) {}

fn identity2[T](t: T) -> T {
    return t;
}

fn identity[T](t: T) -> T {
    let f = identity2(t);
    return f;
}

fn main() {
    let x = 5;
    let y = identity(&x);
    sink(x);
    sink(y);

}

}
